# ncnn-android-yolo11-lockscreen

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/ncnn_android_yolov8_new/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov8n.ncnn.param  yolov8n_cls.ncnn.param
app/src/main/java/com/example/ncnn_android_yolov8_new/: ApiServer.kt  MainActivity.kt  MyService.kt  Yolov8Ncnn.kt
app/src/main/java/com/example/ncnn_android_yolov8_new/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  H264Encoder.cpp  H264Encoder.h  H264RingBuffer.cpp  H264RingBuffer.h  kalman.c  kalman.h  ndkcamera.cpp  ndkcamera.h  sort.cpp  sort.h  spsc.c  spsc.h  tcp_client.c  tcp_client.h  watchdog.c  watchdog.h  yolov8.h  yolov8_cls.cpp  yolov8_det.cpp  yolov8ncnn.cpp
app/src/main/jni/FFmpeg/arm64-v8a/include/libavutil/: ffversion.h
app/src/main/jni/FFmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/jni/RtspServer/: CMakeLists.txt  Makefile  rtsp_h264_file  rtsp_pusher  rtsp_server
app/src/main/jni/RtspServer/example/: rtsp_server.cpp
app/src/main/jni/ffmpeg_rtsp_client/: ffmpeg_rtsp_client.cpp  ffmpeg_rtsp_client.h
app/src/main/jni/rest_api_server/: CMakeLists.txt  api_server.c  api_server.h  jni_export.c
app/src/main/jni/yolov8_light_on_off/: yolov8_light_on_off.cpp  yolov8_light_on_off.h  yolov8ncnn_extend.cpp
app/src/main/res/drawable/: floating_window_bg.xml
app/src/main/res/layout/: layout_floating_window.xml  main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ncnn_android_yolov8_new/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
